[FIX] account_accountant: bank recon split statement button fix
[FIX] account_accountant: bank recon fix action dialog not working
(note that this is a workaround, any dialog is not closing in this controller)
[FIX] form view of the recon widget is out of screen with the new always edit mode
[FIX] Match button should filter and select the line, not have a domain on it
[FIX] Better display for statement and partner name in a row
[FIX] Truncate long fields to not mess up the view

closes odoo/enterprise#31815

--- a/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_kanban.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_kanban.scss
@@ -11,33 +11,111 @@
         height: 100%;
         position: relative;
         overflow: auto;
+        padding: 0;
+        margin: 0;
 
-        .o_kanban_view {
-            padding: 0px;
-        }
+        .o_bank_rec_st_line{
+            margin: 0px !important;
 
-        .statement_separator {
-            height: 0;
-            margin: 0;
-            padding: 2px 0 0 0;
-            border: 0;
-            position: absolute;
-
-
-            .btn-sm {
-                padding-top: 0;
-                padding-bottom: 0;
+            &.o_bank_rec_selected_st_line{
+                border-right: thick solid mix(map-get($theme-colors, 'primary'), map-get($grays, '400'));
             }
-        }
 
-        .statement_separator:hover {
-//             position: relative;
-            top: -12px;
-            z-index: 2;
+            .statement_separator {
+                position: absolute;
+                height: 4px;
+                margin: 0;
+                padding: 2px 0 0 0;
+                border: 0;
+                z-index: 2;
+                background-color: transparent;
+
+                .btn-sm {
+                    position: relative;
+                    padding-top: 0;
+                    padding-bottom: 0;
+                    top: -12px;
+                    display: none;
+                }
+            }
+
+            .statement_separator:hover {
+                 .btn-sm {
+                    display: inline-block;
+                }
+            }
+
+            &:first-child {
+                .statement_separator {
+                    .btn-sm{
+                        top: -4px;
+                    }
+                }
+            }
+
+            .o_bank_rec_st_line_kanban_card{
+                margin: 0px !important;
+                padding-top: 12px !important;
+                padding-bottom: 12px !important;
+                padding-left: 20px !important;
+                padding-right: 20px !important;
+                border-left: 0px !important;
+                border-right: 0px !important;
+                border-top: 0px !important;
+
+                .flex_column{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+
+                    .flex_row{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        width: 100%;
+
+                        #row1_col1{
+                            flex: 1 20%;
+                            width: 20%;
+                            overflow-wrap: break-word;
+                        }
+
+                        #row1_col2{
+                            flex: 1 60%;
+                            width: 60%;
+                        }
+                        #row1_col2_statement{
+                            flex: 1 30%;
+                            width: 30%;
+                        }
+                        #row1_statement{
+                            flex: 1 30%;
+                            width: 30%;
+                        }
+
+                        #row1_col3{
+                            flex: 1 20%;
+                            width: 20%;
+                            text-align: right;
+                        }
+
+                        #row2_col1{
+                            flex: 1 100%;
+                            width: 100%;
+                        }
+
+                        #row2_col2{
+                            text-align: right;
+                        }
+                    }
+                }
+            }
+
+
         }
     }
 
-    .o_bank_rec_right_div{
+    .o_bank_rec_right_div {
         flex: 1 1 70%;
         width: 70%;
         border-left: 1px solid $border-color;
@@ -45,68 +123,11 @@
         position: relative;
         overflow: auto;
         overflow-x: hidden;
-    }
 
-}
-
-.o_bank_rec_st_line_kanban_card{
-    margin: 0px !important;
-    padding-top: 12px !important;
-    padding-bottom: 12px !important;
-    padding-left: 20px !important;
-    padding-right: 20px !important;
-    border-left: 0px !important;
-    border-right: 0px !important;
-    border-top: 0px !important;
-
-    .flex_column{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-
-        .flex_row{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            width: 100%;
-
-            #row1_col1{
-                flex: 1 20%;
-                width: 20%;
-                overflow-wrap: break-word;
-            }
-
-            #row1_col2{
-                flex: 1 60%;
-                width: 60%;
-            }
-
-            #row1_col3{
-                flex: 1 20%;
-                width: 20%;
-                text-align: right;
-            }
-
-            #row2_col1{
-                flex: 1 100%;
-                width: 100%;
-            }
-
-            #row2_col2{
-                text-align: right;
-            }
+        .o_form_view.o_xxl_form_view {
+            flex-direction: column !important;
         }
     }
-    .o_btn_bank_rec_edit{
-        visibility: hidden;
-    }
+
 }
 
-.o_bank_rec_st_line_kanban_card:hover .o_btn_bank_rec_edit{
-    visibility: visible;
-}
-
-.o_bank_rec_selected_st_line{
-    outline: thin solid mix(map-get($theme-colors, 'primary'), map-get($grays, '400'));
-    outline-offset: -1px;
-}
